# q-store-examples

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  SETUP.md  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt
docs/: README.md
docs/archive/: BEST_PRACTICES_IMPLEMENTATION.md  CONNECTION_FIX_SUMMARY.md  FOLDER_STRUCTURE.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  INTEGRATION_COMPLETE.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  MIGRATION_NOTES.md  UPDATE_SUMMARY.md  git_hub_commands_for_main_and_dev_branch_workflows.md
scripts/: demo_logging.py  demo_v3_3_1_fix.py  run_react_training.sh  show_config.py  verify_installation.py  verify_react_integration.py  verify_structure.py  verify_v3_2.py
src/q_store_examples/: README_UTILS.md  __init__.py  basic_example.py  examples_v31.py  examples_v3_2.py  examples_v3_3.py  examples_v3_3_1.py  examples_v3_4.py  financial_example.py  ml_training_example.py  quantum_db_quickstart.py  quickstart_v3_2.py  react_dataset_generator.py  utils.py  utils_optimized.py
tests/: __init__.py  test_basic.py  test_cirq_adapter_fix.py  test_fixes.py  test_logging.py  test_pinecone_ionq_connection.py  test_v31.py  test_v3_3.py
