[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "q-store-examples"
version = "0.1.0"
description = "Standalone example projects demonstrating Q-Store quantum database capabilities"
authors = [
    {name = "Q-Store Team", email = "yucelz@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
keywords = ["quantum", "database", "machine-learning", "ionq", "pinecone"]

dependencies = [
    "q-store>=3.4.3",
    "numpy>=1.20.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "peft>=0.4.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]
data = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
all = [
    "q-store-examples[ml,data,dev]",
]

[project.urls]
Homepage = "https://github.com/yucelz/q-store-examples"
Repository = "https://github.com/yucelz/q-store-examples"
Documentation = "https://github.com/yucelz/q-store-examples/blob/main/README.md"
"Bug Tracker" = "https://github.com/yucelz/q-store-examples/issues"

[project.scripts]
q-store-verify = "q_store_examples.scripts.verify_installation:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["q_store_examples*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
